--- a/ahmesworksheet.cls
+++ b/ahmesworksheet.cls
@@ -17,11 +17,7 @@
 \usepackage{pgfplots}
 
 % Fonts
-\usepackage{fontspec}
-\setromanfont[Ligatures=TeX]{TeX Gyre Schola}
-\usepackage{unicode-math}
-
-\setmathfont[math-style=ISO,bold-style=ISO]{TeX Gyre Schola Math}
+\usepackage{pxfonts}
 
 
 % Redefine maketitle
